[tool.poetry]
name = "pytextprep"
version = "0.1.0"
description = "Performs pre-processing of tweets"
authors = ["Arijeet Chatterjee, Joshua Sia, Melisa Maidana, Philson Chan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
wordcloud = "^1.8.1"
nltk = "^3.6.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
