[tool.poetry]
name = "pytextprep"
version = "0.1.0"
description = "Performs pre-processing of tweets"
authors = ["Arijeet Chatterjee, Joshua Sia, Melisa Maidana, Philson Chan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
