[tool.poetry]
name = "pytextprep"
version = "1.0.5"
description = "Performs pre-processing of tweets"
authors = ["Arijeet Chatterjee, Joshua Sia, Melisa Maidana, Philson Chan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
wordcloud = "^1.8.1"
nltk = "^3.6.7"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pandas = "^1.3.5"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.24.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "pip install poetry && poetry build"  # build dists
dist_path = "dist/"                         # where to put dists
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = "true"                  # always bump version on CD, even without angular commit (default is patch)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
